# course_work_OOP

./: .gitignore  main.py  pyproject.toml  vacancies.json
src/: api.py  file_manager.py  vacancy.py
tests/: test_api.py  test_vacancy.py
