    [tool.poetry]
name = "course-work-oop"
version = "0.1.0"
description = ""
authors = ["j1nnx <neykerez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pip = "^24.2"
types-requests = "^2.32.0.20240914"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
)
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
